[package]
name = "stm32-rust-test"
version = "0.1.0"
authors = ["SzymonKubica <szymo.kubica@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }


[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f439", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
